# ai-document-analysis-assistant

./: .env.example  .gitignore  README.md  package-lock.json  package.json  pyproject.toml
.github/workflows/: backend.yml  dependencies.yml  frontend.yml
backend/: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  run.py
backend/src/ai_document_assistant/: __init__.py  main.py
backend/src/ai_document_assistant/core/: __init__.py  config.py  search.py
backend/src/ai_document_assistant/data_processing/: __init__.py  document_processor.py
backend/src/ai_document_assistant/llm/: __init__.py  chat_manager.py
backend/tests/: test_search.py
src/ai_document_assistant/: __init__.py  __main__.py
src/ai_document_assistant/chat/: __init__.py  chat_manager.py
src/ai_document_assistant/data_processing/: __init__.py  document_processor.py  vector_store.py
src/ai_document_assistant/utils/: __init__.py  helpers.py
