[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-document-assistant"
version = "0.1.0"
authors = [
  { name="Your Name", email="your.email@example.com" },
]
description = "An AI-powered document assistant"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/yourusername/ai-document-assistant"
"Bug Tracker" = "https://github.com/yourusername/ai-document-assistant/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--cov=src --cov-report=xml"

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "B", "UP"] 